[tool.poetry]
name = "summarizer"
version = "0.1.0"
description = ""
authors = ["Arvind-4 <lordarvindthegamer@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
flask = "2.0.2"
spacy = "3.1.3"
python-decouple = "^3.8"
werkzeug = "2.2.2"
en-core-web-sm = {url = "https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.1.0/en_core_web_sm-3.1.0-py3-none-any.whl"}
typing-extensions = "4.4.0"


[tool.poetry.group.dev.dependencies]
gunicorn = "^21.2.0"
uvicorn = "^0.24.0.post1"
djlint = "^1.34.0"
black = "^23.11.0"
pylint = "^3.0.2"
isort = "^5.12.0"
autoflake = "^2.2.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
